# web_crawler

./: .gitignore  README.md  config.yaml  notatki_testowe.txt  pipeline.py  requirements.txt  solutions_LLM.xlsx
model_court/: README.md  pyproject.toml  requirements.txt
model_court/configs/: default.yaml
model_court/datasets/golden/golden_v1/: cases.jsonl
model_court/datasets/raw/exp_20251216T210953Z_dcb546c6/: cases.jsonl
model_court/datasets/raw/exp_20251216T211219Z_8a6c3f8a/: cases.jsonl
model_court/runs/exp_20251216T210953Z_dcb546c6/: vectors.sqlite
model_court/runs/exp_20251216T211219Z_8a6c3f8a/: vectors.sqlite
model_court/runs/exp_20251216T211331Z_1ecb770b/: vectors.sqlite
model_court/scripts/: export_golden.py  query_vectors.py  run_demo.py  run_experiment.py
model_court/src/model_court/: cli.py  compliance_example.py  compliance_orchestrator.py  contradiction_detection.py  policy_gate.py  rule_trace.py
model_court/src/model_court.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
model_court/src/model_court/agents/: __init__.py  base.py  contracts.py  factory.py
model_court/src/model_court/datasets/: golden.py
model_court/src/model_court/llm/: __init__.py  base.py  mock.py  openai_chat.py
model_court/src/model_court/question_gen/: __init__.py  base.py  benchmark.py  synthetic.py
model_court/src/model_court/simulation/: orchestrator.py
model_court/src/model_court/storage/: case_store.py  schema.py
model_court/tests/: test_compliance_pipeline.py  test_orchestrator_smoke.py  test_schema_roundtrip.py
(+58 files in other folders)
